# rag-pipeline

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  dev.md  ingestion.md  rag.md  ragflow.plantuml  setup.md
services/ingestion/: Dockerfile  pyproject.toml
services/ingestion/src/ingestion/: main.py  test_ingestion.py
services/rag_api/: Dockerfile  pyproject.toml
services/rag_api/src/rag_api/: main.py
services/test_client/src/test_client/: main.py
