[project]
name = "rag-pipeline"
version = "0.1.0"
description = "RAG system with ingestion and API services"
readme = "README.md"
authors = [
    { name = "Fabian", email = "37456798+x-46@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/rag_core",
    "services/rag_api",
    "services/ingestion",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
