[project]
name = "ingestion"
version = "0.1.0"
description = "Ingestion service for RAG pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rag-core[ingestion]",
]

[project.scripts]
ingestion = "ingestion.main:main"
ingestion-test = "ingestion.test_ingestion:main"

[tool.uv.sources]
rag-core = { workspace = true }

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion"]
