[project]
name = "rag-api"
version = "0.1.0"
description = "API service for RAG pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rag-core",
]

[project.scripts]
rag-api = "rag_api.main:main"

[tool.uv.sources]
rag-core = { workspace = true }

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_api"]
